schema/testdata/validation_fields_invalid_types/schema.keel
model Foo {
    fields {
        nope Nope
        nopeArray Nope[]
        nopeOptional Nope?
        array Text[]
        message MyMessage
        job MyJob
    }
}

message MyMessage {
    name Text
}

job MyJob {
    @schedule("* * * * *")
}