schema/testdata/errors/fields_invalid_types.keel
model Foo {
    fields {
        //expect-error:9:13:E009:field nope has an unsupported type Nope
        nope Nope
        //expect-error:9:18:E009:field nopeArray has an unsupported type Nope
        nopeArray Nope[]
        //expect-error:9:21:E009:field nopeOptional has an unsupported type Nope
        nopeOptional Nope?
        //expect-error:15:19:TypeError:Repeated fields of type 'Text' are not supported
        array Text[]
        //expect-error:9:16:E009:field message has an unsupported type MyMessage
        message MyMessage
        //expect-error:9:12:E009:field job has an unsupported type MyJob
        job MyJob
    }
}

message MyMessage {
    name Text
}

job MyJob {
    @schedule("* * * * *")
}
